[tool.poetry]
name = "MiroFish"
version = "0.1.0"
description = "A short description of your project"
authors = ["Harsh-404 <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
eo4j = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"